--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "animate.css": "^4.1.1",
     "aos": "^3.0.0-beta.6",
     "axios": "^0.24.0",
-    "bootstrap": "^5.1.3",
+    "bootstrap": "^5.2.3",
     "chart.js": "^3.6.0",
     "jodit-react": "^1.3.24",
     "jspdf": "^2.5.1",
@@ -23,7 +23,7 @@
     "react": "^17.0.2",
     "react-alert": "^7.0.3",
     "react-alert-template-basic": "^1.0.2",
-    "react-bootstrap": "^2.0.0",
+    "react-bootstrap": "^2.7.3",
     "react-calendar": "^3.6.0",
     "react-chartjs-2": "^3.3.0",
     "react-dom": "^17.0.2",
@@ -40,6 +40,7 @@
     "react-uuid": "^1.0.2",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.0",
+    "sass": "^1.62.0",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
