--- a/package.json
+++ b/package.json
@@ -40,11 +40,11 @@
     "react-uuid": "^1.0.2",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.0",
-    "sass": "^1.62.0",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "eslint": "7.32.0",
-    "eslint-config-next": "12.0.1"
+    "eslint-config-next": "12.0.1",
+    "sass": "^1.62.0"
   }
 }
